CAUSEWAY-2297: deal with deprecations (JDK and other)